# gnome-u2ps

./: .cvsignore  .gitignore  AUTHORS  ChangeLog  Makefile.am  README  TODO  autogen.sh  configure.in  gnome-u2ps.spec.in
po/: .cvsignore  ChangeLog  POTFILES.in  ja.po  ko.po
src/: .cvsignore  Makefile.am  fribidi.c  mail.c  mail.h  main.c  shape_arabic.c  util.c  util.h
tests/: arabic.txt  eucjp.txt  iso-2022-jp.txt  sjis-dos.txt  utf8jp.txt
tools/: README  gvbug.pl
