AC_PREREQ(2.52)

AC_INIT(configure.in)

PACKAGE_NAME=gnome-u2ps
PACKAGE_VERSION=0.0.1
AC_SUBST(PACKAGE_NAME)
AC_SUBST(PACKAGE_VERSION)

AM_INIT_AUTOMAKE($PACKAGE_NAME, $PACKAGE_VERSION, no-define)

AC_PROG_CC
AM_DISABLE_STATIC
AC_PROG_LIBTOOL

ALL_LINGUAS="ja ko"
AC_SUBST(ALL_LINGUAS)

GETTEXT_PACKAGE=gnome-u2ps
AC_SUBST(GETTEXT_PACKAGE)
AM_GLIB_GNU_GETTEXT

AC_PROG_INTLTOOL([0.27.2])

u2ps_reqs="
glib-2.0		>= 2.0.0
libgnome-2.0		>= 2.0.0
libgnomeprint-2.2	>= 2.5.4
"

PKG_CHECK_MODULES(U2PS, $u2ps_reqs)
AC_SUBST(U2PS_CFLAGS)
AC_SUBST(U2PS_LIBS)

U2PS_LOCALEDIR='${prefix}/share/locale'
AC_SUBST(U2PS_LOCALEDIR)

AC_OUTPUT([
Makefile
po/Makefile.in
src/Makefile
gnome-u2ps.spec
])
