AC_PREREQ(2.52)

AC_INIT(configure.in)

PACKAGE_NAME=gnome-u2ps
PACKAGE_VERSION=0.0.5
AC_SUBST(PACKAGE_NAME)
AC_SUBST(PACKAGE_VERSION)

AM_INIT_AUTOMAKE($PACKAGE_NAME, $PACKAGE_VERSION, no-define)

AC_PROG_CC
AM_DISABLE_STATIC
AC_PROG_LIBTOOL

ALL_LINGUAS="ja ko"
AC_SUBST(ALL_LINGUAS)

GETTEXT_PACKAGE=gnome-u2ps
AC_SUBST(GETTEXT_PACKAGE)
AM_GLIB_GNU_GETTEXT

AC_PROG_INTLTOOL([0.27.2])

dnl
dnl pkg-config detection
dnl
AC_PATH_PROG(PKG_CONFIG, [pkg-config], [no])
if test x$PKG_CONFIG = xno ; then
  AC_MSG_ERROR([*** pkg-config not found. See http://www.freedesktop.org/software/pkgconfig/])
fi

dnl
dnl libbz2 check
dnl
found_bz2=no
AC_CHECK_LIB(bz2, BZ2_bzopen, [found_bz2=yes])
if test $found_bz2 = "no"; then
  AC_MSG_ERROR([*** No correct bz2 library in your system ***])
fi
BZ2_LIBS="-lbz2"
AC_SUBST(BZ2_LIBS)


iconv_test=no
AC_MSG_CHECKING(iconv iso-2022-jp-2004 implementation)
AC_TRY_RUN([
#include <stdio.h>
#include <stdlib.h>
#include <iconv.h>
#include <locale.h>
#include <string.h>
#include <errno.h>

int main()
{
  char* inbuf = "\x1b\x24\x28\x51\x2d\x21\x1b\x28\x42";
  /*
  char* inbuf = "\x1b\x24\x42\x2d\x21\x1b\x28\x42";
  */
  char* outbuf = NULL;
  char* cursor = NULL;
  size_t inbytes = 0, outbytes = 0;
  iconv_t cd = 0;
  size_t ret = 0;

  errno = 0;

  setlocale(LC_ALL, "");
  cursor = outbuf = calloc(100, sizeof(char));
  cd = iconv_open("UTF-8", "ISO-2022-JP");

  if( cd == (iconv_t)-1 )
    exit((int)cd);

  inbytes = strlen(inbuf);
  outbytes = inbytes * 6 + 1;
  ret = iconv(cd, &inbuf, &inbytes, &cursor, &outbytes);
  iconv_close(cd);

  if( strcmp("\xe2\x91\xa0", outbuf) != 0 ) {
    exit(1);
  }

  free(outbuf);

  if( ret == -1 )
    exit(ret);

  if( inbytes != 0 )
    exit(inbytes);

  exit(errno);
}
],
[iconv_test=yes],[iconv_test=no],)
AC_MSG_RESULT($iconv_test)
if cat /etc/sysconfig/i18n 2>/dev/null | grep ^LANG= | tail -1 | grep 'ja_JP.UTF-8'  >/dev/null 2>&1; then
  moralaa="
　　∧＿∧　　
　（　・∀・）
　（　　　　）

  Moralaa cat is saying...
"
else
  moralaa=""
fi

if test $iconv_test = "no"; then
  AC_MSG_WARN([*** iconv implemantation is broken ***
  $moralaa
***********************************************************
   You are using messy crappy broken iconv library.
   Your system must go home and be kicked out from Japan
   right now.
***********************************************************

Continuing...
])
  sleep 5
fi

u2ps_reqs="
glib-2.0		>= 2.0.0
libgnome-2.0		>= 2.0.0
libgnomeprint-2.2	>= 2.5.4
fribidi			>= 0.10.4
"

PKG_CHECK_MODULES(U2PS, $u2ps_reqs)
AC_SUBST(U2PS_CFLAGS)
AC_SUBST(U2PS_LIBS)

U2PS_LOCALEDIR='${prefix}/share/locale'
AC_SUBST(U2PS_LOCALEDIR)

AC_OUTPUT([
Makefile
po/Makefile.in
src/Makefile
gnome-u2ps.spec
])
